Fied navigation spacing issue

--- a/src/components/w-navbar/w-navbar.scss
+++ b/src/components/w-navbar/w-navbar.scss
@@ -7,5 +7,6 @@
     align-items: center;
     box-shadow: var(--shaddow-medium);
     padding: 0 var(--spacing);
+    justify-content: space-between;
   }
 }
